#362| + Harsha| Fixing place holder issue on ie.

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -1224,3 +1224,6 @@ td .close {
     }
   }
 }
+input[placeholder].placeholder{
+  color: #a2a2a2;
+}
