--- a/modules/openlmis-web/src/main/webapp/public/less/login.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/login.less
@@ -149,3 +149,6 @@ body {
   width: 692px;
   margin-left: -346px;
 }
+input[placeholder].placeholder{
+  color: #a2a2a2;
+}
